# bugs-invasion-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.cfg
blender-projects/: T34v1.blend  T34v1.blend1  TANKS_DOCUMENTATION.md
resources/: Material.material  tank.mesh  tank.skeleton
scripts/: setup-bulletphysic.sh  setup-ogre.sh  setup-reactphysics3d.sh
